# cyrust

./: .gitignore  README
devices/psoc6-02/: Cargo.toml  devgen.sh
devices/psoc6-02/src/: dmac.rs  dw0.rs  flashc.rs  lib.rs  peri.rs  peri_ms.rs  prot.rs  sdhc0.rs
devices/psoc6-02/src/backup/: alm1_date.rs  alm1_time.rs  alm2_date.rs  alm2_time.rs  breg.rs  cal_ctl.rs  ctl.rs  intr.rs  intr_mask.rs  intr_set.rs  pmic_ctl.rs  reset.rs  rtc_date.rs  rtc_rw.rs  rtc_time.rs  trim.rs
devices/psoc6-02/src/cpuss/: ap_ctl.rs  buff_ctl.rs  cal_sup_clr.rs  cal_sup_set.rs  cm0_clock_ctl.rs  cm0_ctl.rs  cm0_int4_status.rs  cm0_nmi_ctl.rs  cm0_pc0_handler.rs  cm0_pc1_handler.rs  cm0_pc2_handler.rs  cm0_pc3_handler.rs  cm0_pc_ctl.rs  cm0_system_int_ctl.rs  cm0_vector_table_base.rs  cm4_clock_ctl.rs  cm4_ctl.rs  cm4_int0_status.rs  cm4_int3_status.rs  cm4_nmi_ctl.rs  cm4_pwr_ctl.rs  cm4_pwr_delay_ctl.rs  cm4_system_int_ctl.rs  cm4_vector_table_base.rs  ecc_ctl.rs  product_id.rs  protection.rs  ram0_ctl0.rs  ram0_pwr_macro_ctl.rs  ram1_ctl0.rs  ram1_pwr_ctl.rs  ram1_status.rs  ram2_ctl0.rs  ram2_pwr_ctl.rs  ram_pwr_delay_ctl.rs  rom_ctl.rs  systick_ctl.rs  trim_ram_ctl.rs  trim_rom_ctl.rs  udb_pwr_ctl.rs  (+1 more)
devices/psoc6-02/src/csd0/: adc_ctl.rs  ambuf.rs  config.rs  csdcmp.rs  hscmp.rs  idaca.rs  idacb.rs  intr.rs  intr_mask.rs  intr_set.rs  io_sel.rs  refgen.rs  sense_duty.rs  sense_period.rs  seq_init_cnt.rs  seq_norm_cnt.rs  seq_start.rs  seq_time.rs  spare.rs  sw_amuxbuf_sel.rs  sw_byp_sel.rs  sw_cmp_n_sel.rs  sw_cmp_p_sel.rs  sw_dsi_sel.rs  sw_fw_mod_sel.rs  sw_fw_tank_sel.rs  sw_hs_n_sel.rs  sw_hs_p_sel.rs  sw_refgen_sel.rs  sw_res.rs  sw_shield_sel.rs
devices/psoc6-02/src/dmac/: ch.rs  ctl.rs
devices/psoc6-02/src/dw0/: crc_ctl.rs  crc_data_ctl.rs  crc_lfsr_ctl.rs  crc_pol_ctl.rs  crc_rem_ctl.rs  ctl.rs  ecc_ctl.rs
devices/psoc6-02/src/efuse/: cmd.rs  ctl.rs  seq_default.rs  seq_program_ctl_0.rs  seq_program_ctl_1.rs  seq_program_ctl_2.rs  seq_program_ctl_3.rs  seq_program_ctl_4.rs  seq_program_ctl_5.rs  seq_read_ctl_0.rs  seq_read_ctl_1.rs  seq_read_ctl_2.rs  seq_read_ctl_3.rs  seq_read_ctl_4.rs  seq_read_ctl_5.rs
devices/psoc6-02/src/flashc/: cm0_ca_ctl0.rs  cm0_ca_ctl1.rs  cm0_ca_ctl2.rs  cm0_status.rs  cm4_ca_ctl0.rs  cm4_ca_ctl1.rs  cm4_ca_ctl2.rs  cm4_ca_status0.rs  cm4_status.rs  crypto_buff_ctl.rs  dmac_buff_ctl.rs  dw0_buff_ctl.rs  dw1_buff_ctl.rs  ecc_ctl.rs  ext_ms0_buff_ctl.rs  ext_ms1_buff_ctl.rs  flash_cmd.rs  flash_ctl.rs  flash_pwr_ctl.rs  fm_ctl.rs  fm_sram_ecc_ctl0.rs  fm_sram_ecc_ctl1.rs  fm_sram_ecc_ctl3.rs
devices/psoc6-02/src/gpio/: vdd_intr.rs  vdd_intr_mask.rs  vdd_intr_masked.rs  vdd_intr_set.rs
devices/psoc6-02/src/hsiom/: alt_jtag_en.rs  amux_split_ctl.rs  monitor_ctl_0.rs  monitor_ctl_1.rs  monitor_ctl_2.rs  monitor_ctl_3.rs
devices/psoc6-02/src/i2s0/: clock_ctl.rs  cmd.rs  ctl.rs  intr.rs  intr_mask.rs  intr_set.rs  rx_ctl.rs  rx_fifo_ctl.rs  rx_watchdog.rs  tr_ctl.rs  tx_ctl.rs  tx_fifo_ctl.rs  tx_fifo_wr.rs  tx_watchdog.rs
devices/psoc6dev/: Cargo.toml  lib.rs
devices/psoc6dev/.cargo/: config
devices/psoc6dev/src/: common.rs  lib.rs
devices/psoc6hal/: Cargo.toml
devices/psoc6hal/src/: cpuss.rs  gpio.rs  hsiom.rs  lib.rs  peri.rs  sysclk.rs  syslib.rs  uart.rs  wdt.rs
uart/: Cargo.toml  memory.x  openocd.tcl  uart.code-workspace
uart/.cargo/: config
uart/src/: main.rs
(+1464 files in other folders)
