[package]
authors = ["Jack (Butch) Griffin <butchg@comcast.net>"]
edition = "2018"
readme = "README.md"
name = "uarttest"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
panic-halt = "0.2.0"
volatile-register="0.2.0"

[dependencies.cortex-m-rt]
version="0.7.3"
features = ["device"]

[dependencies.psoc6dev]
path = "../devices/psoc6dev"

# this lets you use `cargo fix`!
[[bin]]
name = "uarttest"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
