[package]
name = "psoc6-02"
description="PSoC 6 02 Cortex-M peripheral access library"
license="MIT"
version = "0.1.0"
readme = "README.md"
authors = ["Jack (Butch) Griffin <butchg@comcast.net>"]
edition = "2018"
keywords = ["cortex-m", "psoc", "no_std", "embedded"]
categories = ["embedded", "no-std"]

[features]
rt = ["cortex-m-rt/device"]

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
volatile-register="0.2.0"
bare-metal="0.2.5"
vcell="0.1.2"


