[package]
name = "psoc6dev"
description="PSoC 6 Cortex-M peripheral device definitions"
license="MIT"
version = "0.1.0"
readme = "README.md"
authors = ["Jack (Butch) Griffin <butchg@comcast.net>"]
edition = "2018"
keywords = ["cortex-m", "psoc", "no_std", "embedded"]
categories = ["embedded", "no-std"]

[features]
rt = ["cortex-m-rt/device"]

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
