[package]
name = "psoc6hal"
version = "0.1.0"
authors = ["Jack (Butch) Griffin <butchg@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.psoc6-02]
path = "../psoc6-02"
features = ["rt"]

[dependencies.cortex-m-rt]
version="0.6.12"
features = ["device"]
